Fix navbar alignment for education link

--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -19,7 +19,7 @@
   margin: 0;
   padding: 0;
   list-style: none;
-  column-gap: 40px;
+  column-gap: 24px;
   row-gap: 8px;
   align-items: end;
 }
@@ -53,6 +53,7 @@
     flex-direction: row;
     align-items: center;
     font-size: 14px;
+    column-gap: 28px;
   }
   .header ul li {
     color: #eae5ec;
@@ -62,8 +63,8 @@
   }
 }
 @media only screen and (min-width: 900px) {
-  .navbar-connect {
-    display: block;
+  .header ul {
+    column-gap: 30px;
   }
 }
 @media only screen and (min-width: 1200px) {
@@ -79,5 +80,10 @@
   }
   .navbar-title {
     font-size: 18px;
+  }
+}
+@media only screen and (min-width: 1400px) {
+  .navbar-connect {
+    display: block;
   }
 }
